<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:prompt="@string/choose_module" 
        
        />
    
    <TextView
        android:id="@+id/user_idTextView"
        style="@style/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_idTextView" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/user_idTextView"
        android:layout_below="@+id/user_idTextView"
        android:layout_marginTop="79dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/questionEditText"
            style="@style/big_edit_text"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:hint="@string/questionEditTextHint"
            android:inputType="textMultiLine" >
        </EditText>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_selector"
            android:text="@string/submitButton"
            android:textColor="@color/blue" />
    </LinearLayout>

    <TextView
        android:id="@+id/statusTextView"
        style="@style/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/statusTextView" />

</RelativeLayout>