<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginButton"
        android:layout_alignBottom="@+id/loginButton"
        android:layout_alignRight="@+id/passwordEditText"
        android:text="@string/registerButton" 
        android:textColor="#0064b1"
         android:background="@drawable/custom_button_selector" />

    <TextView
        android:id="@+id/loginStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordEditText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:text="@string/loginInternetStatus" 
        style="@style/text_view"
        />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameEditText"
        android:layout_alignLeft="@+id/passwordTextView"
        android:layout_marginBottom="20dp"
        android:text="@string/usernameTextView" 
        style="@style/text_view"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginStatus"
        android:layout_marginBottom="20dp"
        android:layout_toLeftOf="@+id/passwordTextView"
        android:ellipsize="none"
        android:text="@string/loginButton" 
         android:textColor="#0064b1"
         android:background="@drawable/custom_button_selector"/>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:text="@string/passwordTextView" 
        style="@style/text_view"/>

    <TextView
        android:id="@+id/user_idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/askFreeLogoTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/loginLogo2"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        style="@style/text_view"/>

    <EditText
        android:id="@+id/usernameEditText"
        style="@style/small_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/small_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameEditText"
        android:layout_alignRight="@+id/usernameEditText"
        android:layout_alignTop="@+id/passwordTextView"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/askFreeLogoTextView"
        style="@style/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/Logo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_idTextView"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp"
        android:text="@string/LoginLogo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>