<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingTop="16dp" >

        <TextView
            android:id="@+id/regLogoTextView"
            style="@style/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regLogoTextView"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <TextView
            android:id="@+id/emailRegTextView"
            style="@style/text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:text="@string/emailRegTextView" />

        <EditText
            android:id="@+id/emailRegEditText"
            style="@style/small_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingRight="5dp" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <TextView
            android:id="@+id/passRegTextView"
            style="@style/text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/passRegTextView" />

        <EditText
            android:id="@+id/passRegEditText"
            style="@style/small_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <TextView
            android:id="@+id/fnameRegTextView"
            style="@style/text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fnameRegTextView" />

        <EditText
            android:id="@+id/fnameRegEditText"
            style="@style/small_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <TextView
            android:id="@+id/lnameRegTextView"
            style="@style/text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lnameRegTextView" />

        <EditText
            android:id="@+id/lnameRegEditText"
            style="@style/small_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:paddingRight="10dp"
        android:paddingTop="16dp" >

        <Button
            android:id="@+id/registerRegButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerRegButton" 
            android:textColor="#0064b1"
         	android:background="@drawable/custom_button_selector"/>
    </TableRow>

</LinearLayout>